--- a/package.json
+++ b/package.json
@@ -11,14 +11,11 @@
     "url": "git+https://github.com/khelif96/spruce-perf-plugin.git"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.0",
-    "graphql": "^15.3.0",
-    "rollup-plugin-sass": "^1.2.2"
+    "@apollo/client": "3.1.3",
+    "graphql": "^15.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "rollup -c -w",
     "codegen": "graphql-codegen --config codegen.js",
     "clean": "rimraf dist",
     "compile": "npm run clean && cross-env NODE_ENV=production babel src/components --out-dir dist --copy-files --ignore __tests__,spec.js,test.js,stories.js,__snapshots__",
@@ -38,11 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -71,9 +63,6 @@
     "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.19.0",
     "eslint-plugin-react-hooks": "2.5.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.27.1",
     "rollup-plugin-typescript2": "^0.27.2",
